Fixed #5 where tabs on Firefox weren't aligning properly

--- a/docs/.vuepress/styles/vuepress-tabs.styl
+++ b/docs/.vuepress/styles/vuepress-tabs.styl
@@ -48,7 +48,7 @@
   &.is-active
     border-bottom solid 1px #fff
     z-index 2
-    transform translateY(0)
+    transform none
 
   .tabs-component-panels
     border-top-left-radius 0
